vbnc/vbnc/tests/Errors/31061-1.vb
Class Test

	Private _prop As Integer
	
	Public Property Prop As Integer

End Class